# Pars_BS-4

./: pyproject.toml  user_agent.py
ParsingAllPage/: writing_to_files_txt.py
ParsingOnePage/: writing_to_file_csv.py  writing_to_file_json.py  writing_to_file_txt.py
