[tool.poetry]
name = "pars_bs-4"
version = "0.1.0"
description = ""
authors = ["Vladimir-Vologda <vologda2018@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
